--- a/css/tutoringlist.css
+++ b/css/tutoringlist.css
@@ -12,6 +12,11 @@
     color: var(--color-black);
 }
 
+.status-bar {
+    position: relative;
+    width: 360px;
+    height: 24px;
+}
 .list-inner {
     position: relative;
     border-radius: 20px;
@@ -26,7 +31,7 @@
 }
 
 .list-inner :hover{
-    background-color: var(--color-lightcyan);
+    color: var(--color-lightcyan);
 }
 
 .tag1 {
@@ -155,8 +160,8 @@
     width: 32px;
     height: 16px;
     object-fit: cover;
-    right: 0px;
-    top: 20px;
+    right: 10px;
+    top: 10px;
 }
 
 .flag-banner {
@@ -164,8 +169,8 @@
     width: 109px;
     height: 105px;
     object-fit: cover;
-    left: -9px;
-    top: -32px;
+    left: -24px;
+    top: -44px;
 }
 
 .tutoringjoin {
@@ -194,9 +199,13 @@
     width: 125px;
     height: 50px;
     cursor: pointer;
-  }
-  
-  .member-button {
+}
+
+.join-button:hover {
+    color: var(--accent);
+}
+
+.member-button {
     position: absolute;
     top: 35px;
     left: 140px;
@@ -206,9 +215,13 @@
     width: 125px;
     height: 50px;
     cursor: pointer;
-  }
-  
-  .close-button {
+}
+
+.member-button:hover {
+    color: var(--accent);
+}
+
+.close-button {
     position: absolute;
     border-radius: 10px;
     background-color: var(--basecolor-white);
@@ -218,51 +231,60 @@
     width: 75px;
     height: 50px;
     cursor: pointer;
-  }
-  
-    .button-icon1,
-    .button-icon {
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      width: 40px;
-      height: 40px;
-      overflow: hidden;
-      object-fit: cover;
-    }
-    .button-icon1{
-      width: 43px;
-      height: 46px;
-    }
-  
-    .button-text {
-      position: absolute;
-      height: max-content;
-      width: max-content;
-      top: 10px;
-      left: 45px;
-      display: inline-block;
-    }
-    
-    .group {
-      position: absolute;
-      height: 81.63%;
-      width: 96.72%;
-      top: 8.16%;
-      right: 0;
-      bottom: 10.2%;
-      left: 3.28%;
-    }
-    
-.list-1 {
-    position: relative;
-    top: 30px;
-    left: 0px;
-    width: 320px;
-    height: 320px;
 }
 
-.list-2 {
+.close-button:hover {
+    color: var(--accent);
+}
+  
+.button-icon1,
+.button-icon {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  object-fit: cover;
+}
+.button-icon1{
+  width: 43px;
+  height: 46px;
+}
+  
+.button-text {
+  position: absolute;
+  height: max-content;
+  width: max-content;
+  top: 10px;
+  left: 45px;
+  display: inline-block;
+}
+    
+.group {
+  position: absolute;
+  height: 81.63%;
+  width: 96.72%;
+  top: 8.16%;
+  right: 0;
+  bottom: 10.2%;
+  left: 3.28%;
+}
+    
+.list {
+    position: relative;
+    top: 10px;
+    left: 0px;
+    width: 320px;
+    height: 300px;
+}
+
+.list.padding
+{
+    margin-bottom: 50px;
+}
+
+/*.list-2 {
     position: relative;
     top: 5px;
     left: 0px;
@@ -293,11 +315,4 @@
     width: 320px;
     height: 320px;
 }
-
-.list-1.padding
-,.list-2.padding
-,.list-3.padding
-,.list-4.padding
-,.list-5.padding {
-    margin-bottom: 50px;
-}
+*/
