--- a/css/grouplist.css
+++ b/css/grouplist.css
@@ -1,8 +1,6 @@
 .list-frame {
     position: relative;
-    background-color: transparent;
-    right: 60%;
-    left: 40%;
+    background-color: var(--basecolor-white);
     width: 360px;
     height: 800px;
     overflow: scroll;
@@ -23,11 +21,34 @@
     background-color: var(--basecolor-white);
     padding-inline: 5px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    outline-style: solid;
+    outline-color: var(--color-black);
+    outline-width: 2px;
     width: 300px;
     height: 280px;
     top: 10px;
-    left: 15px;
-    cursor: pointer;
+    left: 25px;
+    cursor: default;
+}
+
+.list-inner-head {
+    position: absolute;
+    border-radius: 20px;
+    padding-inline: 5px;
+    width: 300px;
+    height: 50px;
+    top: 0px;
+    left: 0px;
+}
+
+.list-inner-body {
+    position: absolute;
+    border-radius: 20px;
+    padding-inline: 5px;
+    width: 300px;
+    height: 200px;
+    top: 50px;
+    left: 0px;
 }
 
 .tag {
@@ -42,6 +63,7 @@
     top: 1px;
     padding-inline: 5px;
     font-size: var(--overline-size);
+    cursor: pointer;
 }
 
 .tag:hover{
@@ -78,12 +100,20 @@
     height: max-content;
 }
 
+.group-amount.full {
+    color: var(--error);
+}
+
+.group-amount.available {
+    color: var(--success);
+}
+
 .group-name {
     position: absolute;
     display: inline-block;
     height: max-content;
     width: max-content;
-    top: 50px;
+    top: 0px;
     left: 25px;
     color: var(--color-black);
     font-family: 'Roboto', sans-serif;
@@ -97,7 +127,7 @@
     height: max-content;
     width: max-content;
     font-size: var(--subtitle-1-size);
-    top: 75px;
+    top: 25px;
     left: 25px;
 }
 
@@ -105,7 +135,7 @@
     position: absolute;
     width: 100px;
     height: 100px;
-    top: 100px;
+    top: 50px;
     left: 25px
 }
 
@@ -114,7 +144,7 @@
     display: inline-block;
     height: max-content;
     width: max-content;
-    top: 100px;
+    top: 50px;
     left: 140px;
     font-size: var(--subtitle-1-size);
 }
@@ -123,7 +153,7 @@
     position: absolute;
     height: max-content;
     width: max-content;
-    top: 125px;
+    top: 80px;
     left: 140px;
     display: inline-block;
     font-size: var(--subtitle-1-size);
@@ -134,7 +164,7 @@
     display: inline-block;
     height: max-content;
     width: 150px;
-    top: 150px;
+    top: 110px;
     left: 140px;
     font-size: var(--subtitle-1-size);
 }
@@ -144,32 +174,100 @@
     display: inline-block;
     height: max-content;
     width: 260px;
-    top: 205px;
+    top: 155px;
     left: 25px;
     font-size: var(--subtitle-1-size);
 }
 
-.Tdot-button{
+.tdot-button{
     position: absolute;
     width: 32px;
     height: 16px;
     object-fit: cover;
     right: 10px;
     top: 10px;
+    cursor: pointer;
 }
 
-.Tdot-button:hover {
-    color: var(--color-lightcyan);
-
+.tpopup {
+    position: fixed;
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    background: var(--basecolor-white);
+    outline-style: solid;
+    outline-width: 1.75px;
+    width: 358px;
+    height: 340px;
+    left: 1px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    z-index: 2;
+    animation-name: slideup;
+    animation-duration: 400ms;
+    top: 460px;
 }
 
-.flag-banner {
+.tpopup-drag {
+    position: relative;
+    background-color: var(--accent);
+    border-radius: 5px;
+    width: 99px;
+    height: 9px;
+    top: 20px;
+    left: 125px;
+    margin-bottom: 40px;
+    z-index: 2;
+}
+
+.tpopup-option {
+    position: relative;
+    width: 360px;
+    height: 30px;
+    margin-bottom: 20px;
+}
+
+.tpopup-option:hover {
+    color: var(--accent);
+    cursor: pointer;
+}
+
+.tpopup-option-icon {
+    position: relative;
+    width: 34px;
+    height: 30px;
+    top: 2px;
+    left: 40px;
+}
+
+.tpopup-option-text {
+    position: relative;
+    display: inline-block;
+    width: 120px;
+    height: 40px;
+    left: 50px;
+    vertical-align: middle;
+    font-size: var(--subtitle-1);
+}
+
+.tpopup.on {
+    display: block;
+}
+
+@keyframes slideup {
+    from{transform: translateY(300%);}
+}
+
+@keyframes slidedown {
+    from{transform: translateY(-300%);}
+}
+.group-flag-banner {
     position: absolute;
     width: 109px;
     height: 91px;
     object-fit: cover;
-    left: -23.75px;
-    top: -35.75px;
+    left: -23.6px;
+    top: -35.6px;
 }
 
 .tutoringjoin {
@@ -179,7 +277,7 @@
     width: 360px;
     height: 100px;
     top: -20px;
-    z-index: 5;
+    z-index: 1;
     animation-name: slidein;
     animation-duration: 500ms;
   }
@@ -198,6 +296,9 @@
     width: 125px;
     height: 50px;
     cursor: pointer;
+    outline-style: solid;
+    outline-color: var(--color-black);
+    outline-width: 1.3px;
 }
 
 .join-button:hover {
@@ -214,6 +315,9 @@
     width: 125px;
     height: 50px;
     cursor: pointer;
+    outline-style: solid;
+    outline-color: var(--color-black);
+    outline-width: 1.3px;
 }
 
 .member-button:hover {
@@ -230,6 +334,9 @@
     width: 75px;
     height: 50px;
     cursor: pointer;
+    outline-style: solid;
+    outline-color: var(--color-black);
+    outline-width: 1.3px;
 }
 
 .close-button:hover {
@@ -274,7 +381,7 @@
     position: relative;
     top: 10px;
     left: 0px;
-    width: 320px;
+    width: 360px;
     height: 300px;
 }
 
@@ -282,36 +389,3 @@
 {
     margin-bottom: 50px;
 }
-
-/*.list-2 {
-    position: relative;
-    top: 5px;
-    left: 0px;
-    width: 320px;
-    height: 320px;
-}
-
-.list-3 {
-    position: relative;
-    top: -20px;
-    left: 0px;
-    width: 320px;
-    height: 320px;
-}
-
-.list-4 {
-    position: relative;
-    top: -45px;
-    left: 0px;
-    width: 320px;
-    height: 320px;
-}
-
-.list-5 {
-    position: relative;
-    top: -70px;
-    left: 0px;
-    width: 320px;
-    height: 320px;
-}
-*/
