--- a/css/globalTEST.css
+++ b/css/globalTEST.css
@@ -8,9 +8,9 @@ body {
 
 .background {
   position: relative;
-  top:50px;
+  /* top:50px;
   left: 40%;
-  right: 60%;
+  right: 60%; */
   background-color: var(--basecolor-white);
   width: 360px;
   height: 800px;
