--- a/css/creategroup.css
+++ b/css/creategroup.css
@@ -201,5 +201,7 @@ body {
 .background {
   display:flex;
   flex-direction: column;
-  height: 100%;
+  &::-webkit-scrollbar {
+    width: 0;
+}
 }
