--- a/css/FOOTER.css
+++ b/css/FOOTER.css
@@ -14,10 +14,10 @@
     background: #06021b;
  } */
  .navigation {
-    position: relative;
+    position: fixed;
     margin-top: 30px;/*ถ้าเจ๊งแก้เป็น 300 px*/
-    right: 0;
-    bottom: -420;
+    left: 0;
+    top: 720px;
     width: 360px;
     /* height: 70px; */
     min-height: 80px;
@@ -115,6 +115,9 @@
    justify-content: center;
    align-items: center;
    transition: .5s;
+ }
+ .indicator.hidden {
+   display: none;
  }
  .indicator::before {
    content: '';
