--- a/css/FOOTER.css
+++ b/css/FOOTER.css
@@ -15,7 +15,7 @@
  } */
  .navigation {
     position: fixed;
-    margin-top: 30px;/*ถ้าเจ๊งแก้เป็น 300 px*/
+    /* margin-top: 30px; */
     left: 0;
     top: 720px;
     width: 360px;
