--- a/css/HoriSlideBar.css
+++ b/css/HoriSlideBar.css
@@ -1,90 +1,126 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-* {
+:root {
+    --first-color: #2e2e41;
+    --secound-color: #5b85ff;
+    --third-color: #434354;
+    --text-color: #fff;
+
+    --box-shadow: 0 5px 25px rgb(2, 2, 2, 0.1);
+    --text-shadow: 0 5px 25px rgb(2, 2, 2, 0.1);
+}
+
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-}
+    font-family: 'Poppins', sans-serif;
+
+} */
+
 body {
-    display: flex;
-    align-items: center;
-    padding: 0 10px;
-    justify-content: center;
-    min-height: 100vh;
-    background: #dddd;
+    background: var(--first-color);
 }
-.wrapper {
-    padding: 35px;
+
+section {
     position: relative;
-    overflow-x: hidden;
-    max-width: 360px;
-    background: #fff;
-    border-radius: 13px;
+    /* margin: 0 80px; */
+    transition: 0.5s ease;
 }
-.wrapper .icon {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: 120px;
+
+.main-container {
+    position: relative;
+}
+
+.tab-nav-bar {
+    position: relative;
+    margin: 65px 10px 40px 10px;
+}
+
+.tab-navigation {
+    position: relative;
     display: flex;
+    justify-content: center;
     align-items: center;
+    max-width: fit-content;
+    margin: 0 auto;
 }
-.icon:first-child {
-    left: 0;
-    display: none;
-    background: linear-gradient(90deg, #fff 70%, transparent);
-}
-.icon:last-child {
-    right: 0;
-    justify-content: flex-end;
-    background: linear-gradient(-90deg, #fff 70%, transparent);
-}
-.icon i {
-    width: 55px;
-    height: 55px;
-    font-size: 1.2rem;
-    cursor: pointer;
-    text-align: center;
-    line-height: 55px;
-    border-radius: 50%;
-    /* background: #d8d5f2; */
-}
-.icon i:hover {
-    background: #efedfb;
-}
-.icon:first-child i {
-    margin-left: 15px;
-}
-.icon:last-child i {
-    margin-right: 15px;
-}
-.wrapper .tabs-box {
-    display: flex;
-    gap: 12px;
+
+.tab-menu {
+    color: var(--text-color);
     list-style: none;
-    overflow-x: hidden;
+    background: var(--third-color);
+    max-width: 800px;
+    padding: 10px;
+    white-space: nowrap;
+    border-bottom: 1px solid var(--third-color);
+    border-radius: 50px;
+    box-shadow: var(--box-shadow);
+    overflow-x: auto;
+    user-select: none;
     scroll-behavior: smooth;
+    line-height: 26.8px;
 }
-.tabs-box.dragging {
-    scroll-behavior: auto;
+
+.tab-menu.dragging {
+    scroll-behavior: unset;
     cursor: grab;
 }
-.tabs-box .tab {
-    cursor: pointer;
-    font-size: 1.18rem;
-    background: #f5f4fd;
-    padding: 13px 20px;
-    border-radius: 30px;
-    border: 1px solid #d8d5f2;
-    white-space: nowrap;
+
+.tab-menu::-webkit-scrollbar {
+    display: none;
 }
-.tabs-box.dragging .tab {
+
+.tab-btn {
+    color: var(--text-color);
+    display: inline-block;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0 2px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    background: var(--first-color);
+    cursor: pointer;
     user-select: none;
+}
+
+.tab-menu.dragging .tab-btn {
     pointer-events: none;
 }
-.tabs-box .tab.active {
-    color: #fff;
-    background: blueviolet;
-    border-color: transparent;
+
+.tab-btn.active {
+    background: var(--secound-color);
 }
+
+.left, .right {
+    position: absolute;
+    color: var(--text-color);
+    font-size: 22px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.left {
+    left: 0;
+    background: linear-gradient(to left, transparent, var(--first-color) 80%);
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    display: none;
+    
+}
+
+.right {
+    right: 0;
+    background: linear-gradient(to right, transparent, var(--first-color) 80%);
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+
+
+
+
+
+
+
+
