--- a/css/hobby.css
+++ b/css/hobby.css
@@ -10,7 +10,7 @@ ellipse-parent.frame-child {
   border: 3px solid var(--accent);
   box-sizing: border-box;
   width: 313px;
-  height: 1230px;
+  height: 1161px;
 }
 
 .create-button {
@@ -59,7 +59,7 @@ ellipse-parent.frame-child {
   height: 48px;
 }
 .create-cancle {
-  top: 89%;
+  top: 1085px;
   left: 13px;
   width: 292px;
   height: 49px;
@@ -87,7 +87,7 @@ ellipse-parent.frame-child {
 
 .div2 {
   position: absolute;
-  top: 20%;
+  top: 18.6%;
   left: 0;
   text-transform: capitalize;
 }
@@ -95,8 +95,8 @@ ellipse-parent.frame-child {
 .group-inner,
 .textfields {
   position: absolute;
-  top: 90px;
-  left: 23px;
+  top: 0;
+  left: 0;
   width: 290px;
   height: 86px;
 }
@@ -111,7 +111,6 @@ ellipse-parent.frame-child {
   left: 0;
 }
 .group-inner {
-  top: 0;
   right: 0;
   bottom: 0;
   border-radius: 50%;
@@ -127,7 +126,6 @@ ellipse-parent.frame-child {
   width: 38px;
   height: 38px;
   cursor: pointer;
-  top: 0;
 }
 .div3:hover {
   background-color: var(--accent);
@@ -159,12 +157,12 @@ ellipse-parent.frame-child {
 }
 
 .frame-div {
-  height: 0;
-  width: fit-content;
-  top: 135px;
+  height: 46.51%;
+  width: 290px;
+  top: 50%;
   right: 0;
-  bottom: 0;
-  left: 11.25px;
+  bottom: 3.49%;
+  left: 0;
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
@@ -183,12 +181,6 @@ ellipse-parent.frame-child {
   position: absolute;
 }
 
-.star{
-  position: relative;
-  left: 1px;
-  color: red;
-  font-size: var(--font-size-xs);
-}
 
 .textfields-child {
   position: absolute;
@@ -206,7 +198,7 @@ ellipse-parent.frame-child {
   position: absolute;
   top: 0;
   left: 0;
-  width: 162px;
+  width: 136.65px;
   height: 86.13px;
 }
 
@@ -214,7 +206,7 @@ ellipse-parent.frame-child {
   position: absolute;
   top: 5px;
   left: 0;
-  width: 162px;
+  width: 128px;
   height: 86px;
 }
 .textfields-parent {
@@ -229,7 +221,7 @@ ellipse-parent.frame-child {
   position: absolute;
   top: 0;
   right: 0;
-  width: 100px;
+  width: 128px;
   height: 86px;
 }
 
@@ -238,26 +230,12 @@ ellipse-parent.frame-child {
   top: 201px;
   right: 21.5px;
   width: 270px;
-  height: 130px;
+  height: 100px;
 }
-
-.requairment {
-  height: 30px;
-  width: 100px;
-  bottom: 10px;
-  position: absolute;
-  left: 170px;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  font-size: var(--font-size-xs);
-}
-
 .first2 {
   top: 25px;
   font-size: var(--subtitle-1-size);
   color: var(--neutrals2);
-
 }
 
 .detail-text {
@@ -325,10 +303,13 @@ ellipse-parent.frame-child {
 
 .location {
   position: absolute;
-  top: 27%;
+  top: 16px;
   left: 21.5px;
   width: 270px;
   height: 68px;
+}
+.location {
+  top: 317px;
 }
 
 .textarea-child {
@@ -359,7 +340,7 @@ ellipse-parent.frame-child {
 
 .detail {
   position: absolute;
-  top: 35%;
+  top: 405px;
   left: 21.5px;
   width: 270px;
   height: 160px;
@@ -391,7 +372,7 @@ ellipse-parent.frame-child {
 .group-child9,
 .PicUpload-frame {
   position: absolute;
-  top: 47%;
+  top: 564px;
   left: 21.5px;
   width: 270px;
   height: 255px;
@@ -429,15 +410,13 @@ ellipse-parent.frame-child {
 .group-child10,
 .rectangle-parent2 {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  top: 0;
+  left: 0;
   width: 118px;
   height: 30px;
-  padding: 3px;
-  padding-left: 1px;
 }
 .group-child10 {
-  top: 45%;
+  top: 47px;
   left: 5px;
   border-radius: var(--br-8xs);
   border: 1px solid var(--neutrals2);
@@ -452,14 +431,9 @@ ellipse-parent.frame-child {
   width: 275px;
   height: 221px;
 }
-.tag {
-  position: absolute;
-  top: 69.2%;
-  left: 11px;
-}
 .main-frame {
   position: absolute;
-  height: 1300px;
+  height: 153.88%;
   width: 86.94%;
   top: 14%;
   right: 6.67%;
@@ -476,6 +450,8 @@ ellipse-parent.frame-child {
   overflow-y: auto;
   text-align: left;
   color: var(--neutrals2);
+  left: 40%;
+  top: 50px;
   overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 0;
