--- a/css/HoriSlideBar.css
+++ b/css/HoriSlideBar.css
@@ -28,8 +28,9 @@ section {
     transition: 0.5s ease;
 }
 
-.main-container {
+.main-container-scrollBar {
     position: relative;
+    top: 5%;
 }
 
 .tab-nav-bar {
@@ -74,10 +75,10 @@ section {
 .tab-btn {
     color: var(--text-color);
     display: inline-block;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 400;
     margin: 0 2px;
-    padding: 10px 20px;
+    padding: 3.1px 20px;
     border-radius: 30px;
     background: var(--first-color);
     cursor: pointer;
