--- a/css/grouplist.css
+++ b/css/grouplist.css
@@ -1,20 +1,18 @@
 .list-frame {
-    position: absolute;
+    position: relative;
+    top: 23%;
     background-color: transparent;
-    width: auto;
-    height: auto;
-    overflow-x: hidden;
+    width: 360px;
+    max-height: 67%;
+    /* overflow-x: hidden; */
+    overflow: scroll;
     text-align: left;
     font-family: var(--subtitle-1);
     font-size: var(--subtitle-1-size);
     color: var(--color-black);
+    scroll-behavior: smooth;
 }
 
-.status-bar {
-    position: relative;
-    width: 360px;
-    height: 24px;
-}
 .list-inner {
     position: relative;
     border-radius: 20px;
@@ -27,7 +25,7 @@
     width: 300px;
     height: 280px;
     top: 10px;
-    left: 25px;
+    left: 30px;
     cursor: default;
 }
 
@@ -277,7 +275,6 @@
     width: 360px;
     height: 100px;
     top: -20px;
-    z-index: 1;
     animation-name: slidein;
     animation-duration: 500ms;
   }
