--- a/css/tutoringlist.css
+++ b/css/tutoringlist.css
@@ -144,7 +144,7 @@
     left: 25px;
 }
 
-.group-date {
+.group-date-tutoring {
     position: absolute;
     display: inline-block;
     height: max-content;
