--- a/css/home1.css
+++ b/css/home1.css
@@ -12,12 +12,14 @@
 
 .LeftArrow img {
   position: relative;
+  filter: drop-shadow(0px 0px 2px rgb(0,0,0));
   top: 8px; 
   left: 4px; 
 }
 
 .RightArrow img {
   position: relative;
+  filter: drop-shadow(0px 0px 2px rgb(0,0,0));
   top: 8px; 
   left: 5px; 
 }
@@ -35,6 +37,7 @@
   left: -0.5px;
   border-radius: 50%;
   background-color: var(--neutrals1);
+  /* background-color: #000; */
   width: 231px;
   height: 231px;
   transform-origin: 0 0;
@@ -250,4 +253,6 @@
   width: 225px;
   height: 225px;
   object-fit: cover;
+  border: 2px solid #000;
+  border-radius: 50%;
 }
